--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+@media print {
+	* { -webkit-print-color-adjust: exact; }
+	html { background: none; padding: 0; }
+	body, #invoice-wrapper { box-shadow: none; margin: 0; }
+	span:empty { display: none; }
+	.add, .cut, #controls { display: none; }
+}
+
+@page { margin: 0; }
