--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -34,7 +34,7 @@
 	box-sizing: content-box;
 	color: inherit;
 	font-family: inherit;
-	/* font-size: inherit; */
+	font-size: inherit;
 	font-style: inherit;
 	font-weight: inherit;
 	line-height: inherit;
