--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -157,7 +157,7 @@ aside h1 { border-color: #999; border-bottom-style: solid; }
 
 .add:hover { background: #00ADEE; }
 
-.cut { opacity: 0; position: absolute; top: 0; left: -1.5em; }
+.cut { opacity: 0; position: absolute; top: 0; left: -25px;; }
 .cut { -webkit-transition: opacity 100ms ease-in; }
 
 tr:hover .cut { opacity: 1; }
