--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -71,7 +71,7 @@ td { border-color: #DDD; }
 /* page */
 
 html { font: 16px/1 'Open Sans', sans-serif; overflow: auto; padding: 0.5in; }
-html { background: #999; cursor: default; }
+html { background: #f7fafc; cursor: default; }
 
 body { box-sizing: border-box;  }
 /* header */
@@ -79,9 +79,6 @@ body { box-sizing: border-box;  }
 header { margin: 0 0 3em; }
 header:after { clear: both; content: ""; display: table; }
 
-header h1 { background: #000; border-radius: 0.25em; color: #FFF; margin: 0 0 1em; padding: 0.5em 0; }
-header address { float: left;font-size: 75%; font-style: normal; line-height: 1.25; margin: 0 1em 1em 0;}
-header address p { margin: 0 0 0.25em; }
 header span, header img { display: block; float: right; }
 header span { margin: 0 0 1em 1em; max-height: 25%; max-width: 60%; position: relative; }
 header img { max-height: 100%; max-width: 100%; }
@@ -172,7 +169,6 @@ tr:hover .cut { opacity: 1; }
 	width: 8.5in;
 	background: #FFF; 
 	border-radius: 1px; 
-	box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5);
 	box-sizing: border-box;
  }
 
