--- a/src/Containers/Control.module.css
+++ b/src/Containers/Control.module.css
@@ -7,6 +7,7 @@
 	box-sizing: border-box; 
 	line-height: 30px;
 	display:flex;
+	box-shadow: 0px 2px 4px 0px var(--color-gray-400);
 }
 .Control input{
 	border: 1px solid #DDD;
